--- a/app/assets/stylesheets/pages/_list-of-bookmarks.scss
+++ b/app/assets/stylesheets/pages/_list-of-bookmarks.scss
@@ -15,3 +15,8 @@
    height: 200px;
    width: 100%;
 }
+
+#list-of-bookmarks .bookmark-card-content-overview {
+  height: 300px;
+  overflow: scroll;
+}
