--- a/app/assets/stylesheets/pages/_lists.scss
+++ b/app/assets/stylesheets/pages/_lists.scss
@@ -3,8 +3,8 @@
 // You can use Sass (SCSS) here: https://sass-lang.com/
 
 #lists .banner {
-  // background-image: url("https://picsum.photos/1600/300?grayscale");
-  background-color: rgba(178, 178, 199, 0.835);
+  background-image: url("https://picsum.photos/1600/300?grayscale");
+  // background-color: rgba(178, 178, 199, 0.835);
   height: 300px;
   // background-color: lightblue;
   h2 {
@@ -19,6 +19,16 @@
   background-image: url("https://picsum.photos/400/200?grayscale");
   // background-color:  rgb(201, 250, 229);
   height: 200px;
+  background-repeat: no-repeat;
+  background-size: cover;
+  background-position: center;
+}
+
+.card-photo-attached {
+  height: 200px;
+  background-repeat: no-repeat;
+  background-size: cover;
+  background-position: center;
 }
 
 #lists h5 {
