--- a/app/views/lists/index.html.erb
+++ b/app/views/lists/index.html.erb
@@ -17,14 +17,22 @@
             <%= link_to "Create a Movie List", new_list_path, class: "btn btn-success" %>
           </div>
 
+
+
           <div class="d-flex row col-lg-12">
             <% @lists.each do  |list| %>
-              <div class="list-card row col-lg-3 col-sm-6">
-                <div class="content mx-1">
+              <div class="row col-lg-3 col-sm-6">
+                <div class="mx-1">
+                  <% if list.photo.attached? %>
+                  <div style="background-image: linear-gradient(rgba(0,0,0,0.3), rgba(0,0,0,0.3)), url('<%= cl_image_path list.photo.key, height: 200, crop: :scale %>')" class="card-photo-attached">
+                    <h5><%= list.name %></h5>
+                  </div>
+                  <% else %>
                   <div class="card-image">
                     <h5><%= list.name %></h5>
                   </div>
-                  <div class="list-card-content">
+                  <% end %>
+                  <div>
                     <%= link_to "Show Details", list_path(list) %>
                   </div>
                 </div>
