--- a/app/assets/stylesheets/pages/_list-of-bookmarks.scss
+++ b/app/assets/stylesheets/pages/_list-of-bookmarks.scss
@@ -4,20 +4,33 @@
   // background-color: rgba(178, 178, 199, 0.835);
 }
 
-#list-of-bookmarks .bookmark-card {
-  // padding: 10px
-}
-
 
 #list-of-bookmarks .bookmark-card img {
-
   width: 100%;
-  // background-repeat: no-repeat;
-  // background-size: cover;
-  // background-position: center
 }
 
 #list-of-bookmarks .bookmark-card-content-overview {
-  height: 300px;
+  height: 200px;
   overflow: scroll;
+}
+
+#list-of-bookmarks .reviews-inputs {
+  padding: 15px;
+  border-right: solid rgb(200, 198, 198) 2px;
+
+    ul li{
+      list-style-type: none;
+    }
+}
+
+#list-of-bookmarks .reviews-form {
+  padding-top:15px;
+  padding-right:15px;
+  padding-bottom:15px;
+  border-right: solid rgb(200, 198, 198) 2px;
+
+}
+
+#list-of-bookmarks .reviews-container {
+  max-height: 300px;
 }
