--- a/app/views/bookmarks/new.html.erb
+++ b/app/views/bookmarks/new.html.erb
@@ -1,6 +1,11 @@
-<h1>Bookmarks#new</h1>
-<%= simple_form_for([@list, @bookmark]) do |f| %>
-  <%= f.input :comment %>
-  <%= f.association :movie, collection: Movie.all.order(:title), input_html: { data: { controller: 'select2' } } %>
-  <%= f.button :submit %>
-<% end %>
+<div class="d-flex flex-row justify-content-center">
+  <div class="row col-lg-3 col-md-4 col-sm-6 mt-5 bg-white shadow rounded">
+  <%# form %>
+    <%= simple_form_for([@list, @bookmark]) do |f| %>
+      <div class="mt-2"></div>
+      <%= f.input :comment %>
+      <%= f.association :movie, collection: Movie.all.order(:title), input_html: { data: { controller: 'select2' } } %>
+      <%= f.button :submit %>
+    <% end %>
+  </div>
+</div>
