--- a/app/views/lists/new.html.erb
+++ b/app/views/lists/new.html.erb
@@ -1,5 +1,10 @@
-<%= simple_form_for @list do |f| %>
-  <%= f.input :name %>
-  <%= f.input :photo, as: :file %>
-  <%= f.button :submit %>
-<% end %>
+<div class="d-flex flex-row justify-content-center">
+  <div class="row col-lg-4 col-md-4 col-sm-6 mt-5 bg-white shadow rounded">
+    <%= simple_form_for @list do |f| %>
+    <div class="mt-2"></div>
+      <%= f.input :name %>
+      <%= f.input :photo, as: :file %>
+      <%= f.button :submit %>
+    <% end %>
+  </div>
+</div>
