--- a/app/views/lists/show.html.erb
+++ b/app/views/lists/show.html.erb
@@ -1,37 +1,45 @@
 <div id="list-of-bookmarks">
-  <div class="banner">
-    <div class="btn btn-alert"><%= @list.bookmarks.count %></div>
+  <div class="banner d-flex flex-column justify-content-center">
+    <h1 class="text-center text-warning"><%= @list.name %></h1>
+    <div class="btn btn-alert text-light"><%= @list.bookmarks.count %> movie(s)</div>
   </div>
 
-  <%= link_to "Add a movie", new_list_bookmark_path(@list), class: "btn btn-success"  %>
+  <div class=" mt-3 d-flex align-items-center justify-content-center">
+    <div class="btn btn-secondary btn-lg">
+      <i class="fas fa-calendar-plus "></i>
+      <%= link_to "Add a movie", new_list_bookmark_path(@list), class:"text-decoration-none text-light" %>
+    </div>
+  </div>
 
   <div class="bookmarks-cards-container d-flex flex-row  col-lg-12">
     <% @list.bookmarks.each do |bookmark| %>
-      <div class="col-lg-4 col-md-6 col-sm-6 p-2">
+      <div class="col-lg-4 col-md-6 col-sm-6 col-12 p-2">
         <div class="bookmark-card  shadow mb-5 bg-white rounded">
           <%= image_tag bookmark.movie.poster_url, height: 500 %>
           <div class="bookmark-card-content d-flex flex-column p-3">
-            <h5>
-              <strong><%= bookmark.movie.title %></strong>
-              <span> - <%= bookmark.movie.rating %> <i class="material-icons">star_border</i></span>
+            <h5 class="d-flex flex-row justify-content-start align-items-center">
+              <strong><%= bookmark.movie.title %> - </strong>
+              <span><%= bookmark.movie.rating %> <i class="fas fa-star text-warning"></i></span>
             </h5>
 
             <div class="bookmark-card-content-overview overflow-auto border-bottom">
-              <p><%= bookmark.movie.overview %></p>
+              <p class="text-secondary"><%= bookmark.movie.overview %></p>
             </div>
 
-            <div class="d-flex flex-row justify-content-between">
+            <div class="d-flex flex-row justify-content-between align-items-center">
 
-              <div>
-                <i class="material-icons">format_quote</i>
+
+              <div class="d-flex align-items-center mt-1">
+              <i class="material-icons">format_quote</i>
                 <span><%= bookmark.comment %></span>
               </div>
 
-              <%= link_to "Delete",
+
+              <%= link_to "",
                     bookmark_path(bookmark),
                     method: :delete,
                     data: { confirm: "Are you sure?" },
-                    class: "text-danger" %>
+                    class: "text-danger fas fa-trash-alt" %>
             </div>
           </div>
         </div>
@@ -39,19 +47,27 @@
     <% end %>
   </div>
 
+<%# Reviews %>
+  <div class="d-flex flex-row reviews-container">
+    <div class="col-lg-3 col-md-4 col-sm-6 m-3 reviews-inputs">
+      <h2>Reviews</h2>
+      <ul class="list-group">
+      <% @list.reviews.each do |review| %>
+        <li class="list-item mt-1"><strong><%= review.rating %></strong><i class="fas fa-star text-warning"></i> - <%= review.comment %></li>
+      <% end %>
+      </ul>
+    </div>
 
-  <h2>Reviews</h2>
-  <ul class="list-group">
-  <% @list.reviews.each do |review| %>
-    <li class="list-item"><%= review.rating %> - <%= review.comment %></li>
-  <% end %>
-  </ul>
+    <div class="col-lg-3 col-md-4 col-sm-6 m-3 reviews-form">
+      <h2>Leave a Review</h2>
+      <%= simple_form_for([@list, @review]) do |f| %>
+      <%= f.input :comment %>
+      <%= f.input :rating %>
+      <%= f.button :submit, class: 'btn btn-success' %>
+      <% end %>
+    </div>
+  </div>
 
-  <h2>Leave a Review</h2>
-  <%= simple_form_for([@list, @review]) do |f| %>
-  <%= f.input :comment %>
-  <%= f.input :rating %>
-  <%= f.button :submit, class: 'btn btn-success' %>
-<% end %>
 
+<%# end of html%>
 </div>
